# flashpaste

./: .gitignore  AGENTS-release-check.sh  AGENTS.md  CHANGELOG.md  Makefile  README.md  ROADMAP.md  bootstrap.sh  flake.nix  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  release.yml
.omc/: project-memory.json
.omc/sessions/: 4ed62d6f-ee68-42f5-b1ed-48bcfd733962.json
.omx/state/active-sessions/: mcp-105938.json  mcp-1168159.json  mcp-1512759.json  mcp-1614506.json  mcp-1637503.json  mcp-1734424.json  mcp-1754209.json  mcp-1814689.json  mcp-2312776.json  mcp-280614.json  mcp-3847184.json  mcp-4030969.json  mcp-63444.json
config/: keybindings.canonical
docs/: install.md  overlay-references.md
docs/adr/: 0006-reduce-bash-surface-bounded-by-tier1-fallback.md  0007-wayland-data-control-on-non-mutter.md  README.md
examples/: kitty.conf.snippet  tmux.conf.snippet
openspec/changes/flashpaste-overlayd-phase1-2026-05-20/: CHANGE.md
openspec/plans/flashpaste-overlayd-phase1-2026-05-20/: architect.md  checkpoints.md  critic.md  executor.md  plan.json  plan.md  planner.md  tasks.md  verifier.md  writer.md
packaging/: build-deb.sh  build-rpm.sh  package-smoke.sh
packaging/aur/: PKGBUILD  PKGBUILD-git
packaging/homebrew/: README.md  flashpaste.rb
packaging/rpm/: flashpaste.spec
rs/: Cargo.toml
rs/flashpaste/: Cargo.toml
rs/flashpaste-common/: Cargo.toml
rs/flashpaste-common/src/: clipboard_policy.rs  compress.rs  lib.rs  paths.rs  tmux.rs
rs/flashpaste-dispatch/src/: main.rs
rs/flashpaste-shoot/src/: main.rs
rs/flashpaste-trigger/src/: main.rs
rs/flashpaste/src/: main.rs
rs/flashpasted/: Cargo.toml
rs/flashpasted/src/: agent.rs  clip_watch.rs  inotify_watch.rs  ipc.rs  main.rs  paste.rs  state.rs  tmux.rs  wayland.rs  x11.rs
skills/flashpaste/: SKILL.md
systemd/: clipboard-janitor.service  flashpaste-screenshot-watcher.path  flashpaste-screenshot-watcher.service  flashpasted.service
tests/: click-through.md  keybindings-check.test.sh  kitty-focused-is-tmux.test.sh  wl-paste-guard.test.sh
